<resources>
    <string name="app_name">MyNote</string>
    <string name="date">date</string>
    <string name="title">Title</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="add_note">Add Note</string>
    <string name="what_happened_today">What happened today?</string>
    <string name="add">+</string>
    <string name="title_activity_edit_notes">edit_notes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="edit_changes">Edit Changes</string>
    <string name="delete">Delete</string>
    <string name="save_changes">Save Changes</string>
</resources>